refactored to fix parameter list error