@@ -5,6 +5,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.ecm.common.client.CcdClient;
 import uk.gov.hmcts.ecm.common.exceptions.CaseCreationException;
@@ -36,7 +37,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
@@ -367,16 +367,21 @@ public class CaseManagementForCaseWorkerService {
     public void setMigratedCaseLinkDetails(String authToken, CaseDetails caseDetails) {
         // get a target case data using the source case data and
         // elastic search query
-        List<SubmitEvent> submitEvents = caseRetrievalForCaseWorkerService.transferSourceCaseRetrievalESRequest(
-                caseDetails.getCaseId(), authToken, caseTypeIdsToCheck);
-        if (CollectionUtils.isEmpty(submitEvents) || submitEvents.get(0) == null) {
+        Pair<String, List<SubmitEvent>> caseRefAndCaseDataPair =
+                caseRetrievalForCaseWorkerService.transferSourceCaseRetrievalESRequest(
+                        caseDetails.getCaseId(), authToken, caseTypeIdsToCheck);
+        if (caseRefAndCaseDataPair == null
+                || caseRefAndCaseDataPair.getFirst().isEmpty()
+                || caseRefAndCaseDataPair.getSecond().isEmpty()) {
             return;
         }
-
-        log.info("SubmitEvents are retrieved from ES for the update target case: {}.", submitEvents.get(0).getCaseId());
-        String sourceCaseId = String.valueOf(submitEvents.get(0).getCaseId());
+        String sourceCaseTypeId = caseRefAndCaseDataPair.getFirst();
+        SubmitEvent submitEvent = caseRefAndCaseDataPair.getSecond().get(0);
+        log.info("SubmitEvent retrieved from ES for the update target case: {} with source case type of {}.",
+                submitEvent.getCaseId(), sourceCaseTypeId);
+        String sourceCaseId = String.valueOf(submitEvent.getCaseId());
         String ethosCaseReference = caseRetrievalForCaseWorkerService.caseRefRetrievalRequest(authToken,
-                caseDetails.getCaseTypeId(), EMPLOYMENT_JURISDICTION, sourceCaseId);
+                sourceCaseTypeId, EMPLOYMENT_JURISDICTION, sourceCaseId);
         log.info("Source Case reference is retrieved via retrieveTransferredCaseReference: {}.", ethosCaseReference);
 
         if (ethosCaseReference != null) {
@@ -458,7 +463,7 @@ public class CaseManagementForCaseWorkerService {
                 }
             }
             caseData.setRespondentCollection(Stream.concat(activeRespondent.stream(),
-                    struckRespondent.stream()).collect(Collectors.toList()));
+                    struckRespondent.stream()).toList());
             respondentDefaults(caseData);
         }
         return caseData;
@@ -481,7 +486,7 @@ public class CaseManagementForCaseWorkerService {
                 }
             }
             caseData.setRespondentCollection(Stream.concat(continuingRespondent.stream(),
-                    notContinuingRespondent.stream()).collect(Collectors.toList()));
+                    notContinuingRespondent.stream()).toList());
             respondentDefaults(caseData);
         }
         return caseData;
